# substrate-stencil

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  docker-compose.yml  my-staging-raw.json  my-staging.json  stencil-staging-raw.json  stencil-staging.json  stencil-testnet-config.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  lib.rs  main.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs  voter_bags.rs
runtime/src/weights/: mod.rs
utils/voter-bags/: Cargo.toml
utils/voter-bags/src/: main.rs
