[package]
name = "node-primitives"
version = "2.0.0"
authors = ["Kaichao Sun"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/kaichaosun/substrate-stencil"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"]}

sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40", default-features = false }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
]
